--- a/frontend/styles/header.css
+++ b/frontend/styles/header.css
@@ -6,7 +6,6 @@
 	inset: 0 0 auto 0;
 	padding: 1em 2em;
 	background-color: var(--clr-main);
-	width: 100%;
 	z-index: 1000;
 }
 
@@ -21,13 +20,18 @@
 	color: var(--clr-bg);
 }
 
+.middle-section {
+	flex: 1;
+	display: flex;
+	justify-content: space-evenly;
+}
+
 .about-nav,
 .lessons-nav,
 .pricing-nav,
 .faq-nav {
 	font-size: var(--fs-500);
 	font-weight: 400;
-	padding: 1em;
 	color: var(--clr-bg);
 }
 
